fixed scrollbar

--- a/css/main.scss
+++ b/css/main.scss
@@ -64,6 +64,7 @@ $on-laptop:        800px;
 
 body{
     font-family: "Trebuchet MS", Helvetica, sans-serif;
+    overflow-y: scroll;
 }
 
 // main area
